chore: Ajout plaquette PDF (59 MB) + protection .gitignore 📄
- PlaquetteCoLiwe.pdf dans assets/documents/ (59 MB < 100 MB GitHub)
- .gitignore protège contre réajout gros PDF (103 MB)
- Bouton téléchargement fonctionnel sur site en ligne

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,5 @@ node_modules/
 *.log
 .env
 
-# Documents volumineux (PDFs, etc.)
-assets/documents/*.pdf
+# Bloquer uniquement le gros PDF (103 MB) s'il réapparaît
+assets/PlaquetteCoLiwe.pdf
